# oracle

./: .dockerignore  .env.example  Dockerfile  client.py  docker-compose.yml  main.py  pyproject.toml
api/: __init__.py  app.py
api/routes/: __init__.py  alfred.py
bot/: client.py
cogs/admin/: admin.py
cogs/plex/: plex.py  views.py
config/: logging.py  settings.py
data/: config.yml
server/: app.py  routes.py
services/: alfred.py  extensions.py  messaging.py  plex.py
